add bulma style + navbar template

--- a/scaling-barnacle/src/index.html
+++ b/scaling-barnacle/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="has-navbar is-fixed-top">
 <head>
   <meta charset="utf-8">
   <title>ScalingBarnacle</title>
